syntax = "proto3";

package voter.votes.v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/hi20160616/voter/api/voter/v1;v1";

service VotesAPI {
  rpc ListVotes(ListVotesRequest) returns (ListVotesResponse) {
    option (google.api.http) = {
      get: "/v1/{parent=rols/*}/votes"
    };
  }
  rpc GetVote(GetVoteRequest) returns (Vote) {
    option (google.api.http) = {
      get: "/v1/{name=votes/*}"
    };
  }
  rpc SearchVotes(SearchVotesRequest) returns (SearchVotesResponse) {
    option (google.api.http) = {
      get: "/v1/{name=votes/*/search}"
    };
  }
  rpc CreateVote(CreateVoteRequest) returns (Vote) {
    option (google.api.http) = {
      post: "/v1/{parent=roles/*/votes}"
      body: "vote"
    };
  }
  rpc UpdateVote(UpdateVoteRequest) returns (Vote) {
    option (google.api.http) = {
      patch: "/v1/{vote.name=votes/*/update}"
      body: "vote"
    };
  }
  rpc DeleteVote(DeleteVoteRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/{name=votes/*/delete}"
    };
  }
}

message ListVotesRequest{
  // The parent resource name
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListVotesResponse{
  repeated Vote votes = 1;
  string next_page_token = 2;
}

message GetVoteRequest {
  string name = 1;
}

message SearchVotesRequest{
  string name = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message SearchVotesResponse{
  repeated Vote votes = 1;
  string next_page_token = 2;
}

message CreateVoteRequest {
  string parent = 1;
  Vote vote = 2;
}

message UpdateVoteRequest {
  Vote vote = 1;
  // The update mask applies to the resource. For the `FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#fieldmask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteVoteRequest {
  string name = 1;
}

message Vote{
  string name = 1;
  int32 vote_id = 2;
  string title = 3;
  int32 is_radio = 4;
  string a = 5;
  string b = 6;
  string c = 7;
  string d = 8;
  string e = 9;
  string f = 10;
  string g = 11;
  string h = 12;
  int32 HasTxtField = 13;
  google.protobuf.Timestamp create_time = 14;
  google.protobuf.Timestamp update_time = 15;
}
